# picovaders

./: .gitignore  CMakeLists.txt  README.md  picovaders.cpp  picovaders.hpp
assets/: spritesheet.aseprite  spritesheet.cpp  spritesheet.hpp
state/: game.cpp  game.hpp  splash.cpp  splash.hpp  title.cpp  title.hpp
utils/: text.cpp  text.hpp  tick.cpp  tick.hpp
